<resources>
    <string name="app_name">Appzen</string>
    <string name="i_agree_to_term_and_conditions">I agree to term and conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="title_activity_fav_list_app__recycler_view_practice">
        FavListApp_RecyclerViewPractice
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="checkbox">CheckBox</string>
</resources>